<resources>
    <string name="app_name">AndroidLabs_Summer</string>
    <string name="hello_message">Hello world!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="LoginText">Login</string>
    <string name="LoginFieldText">Email</string>
    <string name="passwordText">Password</string>
    <string name="passwordFieldText">Password</string>
    <string name="LoginButton">Login</string>
    <string name="dialog_message">Do you want to finish this activity</string>
    <string name="dialog_title">Finish Activity</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="buttonChat">Start Chat</string>
    <string name="messageText">text</string>
</resources>
